<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_margin_top"
            android:gravity="center"
            android:text="@string/text_view_text"
            android:textColor="@color/white"
            android:textSize="@dimen/text_view_size" />


        <EditText
            android:id="@+id/editTextCityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:hint="@string/city_hint"
            android:inputType="text"
            android:text=""
            android:textColor="@color/white"
            android:textSize="@dimen/edit_text_size" />

        <Button
            android:id="@+id/btnSearchCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/button_margin_top"
            android:text="@string/button_search" />

    </LinearLayout>
</ScrollView>


