<?xml version="1.0" encoding="utf-8"?>
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".WeatherDetailsFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/button_margin_top">

    <TableRow
        android:layout_width="match_parent"
        >

        <TextView
            android:id="@+id/txt_city_name"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_margin_top"
            android:layout_column="1"
            android:layout_weight="1"
            android:text=""
            android:textColor="@color/white"
            android:textSize="@dimen/text_view_size"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/txt_temperature"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_margin_top"
            android:layout_column="2"
            android:layout_weight="1"
            android:text=""
            android:textColor="@color/white"
            android:textSize="@dimen/text_view_size"
            android:gravity="center_horizontal"/>

    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/button_margin_top"
            android:layout_column="1"
            android:layout_weight="1"
            android:text="@string/wind"
            android:textColor="@color/white"
            android:textSize="@dimen/text_view_size"
            android:gravity="center_horizontal"/>
        <TextView android:id="@+id/txt_wind"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_margin_top"
            android:layout_column="2"
            android:layout_weight="2"
            android:text=""
            android:textColor="@color/white"
            android:textSize="@dimen/text_view_size"
            android:gravity="center_horizontal"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/button_margin_top"
            android:layout_column="1"
            android:layout_weight="1"
            android:text="@string/pressure"
            android:textColor="@color/white"
            android:textSize="@dimen/text_view_size"
            android:gravity="center_horizontal"/>
        <TextView android:id="@+id/txt_pressure"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_margin_top"
            android:layout_column="2"
            android:layout_weight="2"
            android:text=""
            android:textColor="@color/white"
            android:textSize="@dimen/text_view_size"
            android:gravity="center_horizontal"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/button_margin_top"
            android:layout_column="1"
            android:layout_weight="1"
            android:text="@string/humidity"
            android:textColor="@color/white"
            android:textSize="@dimen/text_view_size"
            android:gravity="center_horizontal"/>
        <TextView android:id="@+id/txt_humidity"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_margin_top"
            android:layout_column="2"
            android:layout_weight="2"
            android:text=""
            android:textColor="@color/white"
            android:textSize="@dimen/text_view_size"
            android:gravity="center_horizontal"/>
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/button_margin_top"
            android:layout_column="1"
            android:layout_weight="1"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textSize="@dimen/text_view_size"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/txt_description"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_margin_top"
            android:layout_column="2"
            android:layout_weight="2"
            android:text=""
            android:textColor="@color/white"
            android:textSize="@dimen/text_view_size"
            android:gravity="center_horizontal"/>
    </TableRow>

 </TableLayout>

